--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,5 +47,14 @@ ReactDOM.render(<Timer />, example2);
 
 </script>
 
+<script src="/socket.io/socket.io.js"></script>
+<script>
+const socket = io.connect(location.href);
+socket.on('news', function (data) {
+	console.log(data);
+	socket.emit('my other event', {my: 'data'});
+});
+</script>
+
 </body>
 </html>
