--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,10 +17,15 @@
 const example1 = document.getElementById('example1');
 const example2 = document.getElementById('example2');
 const example3 = document.getElementById('example3');
+const ctx = {};
 
 const HelloMessage = React.createClass({
+	getInitialState() {
+		if (this.props.ctx) this.props.ctx.hhh = this;
+		return {name: this.props.name};
+	},
 	render() {
-		return <h1>Hello, {this.props.name}!</h1>;
+		return <h1>Hello, {this.state.name}!</h1>;
 	}
 });
 
@@ -30,6 +35,7 @@ const Timer = React.createClass({
 	},
 	tick() {
 		this.setState({secondsElapsed: this.state.secondsElapsed + 1});
+		this.props.ctx.hhh.setState({name: 'React ' + this.state.secondsElapsed});
 	},
 	componentDidMount() {
 		this.interval = setInterval(this.tick, 1000);
@@ -42,8 +48,11 @@ const Timer = React.createClass({
 	}
 });
 
-ReactDOM.render(<HelloMessage name="React" />, example1);
-ReactDOM.render(<Timer />, example2);
+ReactDOM.render(<HelloMessage name="React" ctx={ctx} />, example1);
+ReactDOM.render(<Timer ctx={ctx}/>, example2);
+
+console.log(Timer);
+console.log(HelloMessage);
 
 </script>
 
