--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
 <p>Welcome to <%= title %></p>
 <% include react %>
 <% include socket %>
-<% include ajax %>
+<% include light-request %>
 
 <div id="hello-message"></div>
 <div id="app-main"></div>
