--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,12 @@
 <body>
 <h1><%= title %></h1>
 <p>Welcome to <%= title %></p>
-<% include react %>
+
+<script src="js/min/react.min.js"></script>
+<script src="js/min/react-dom.min.js"></script>
+<script src="js/min/ReactRouter.min.js"></script>
+
+<!--<% include react %>-->
 <% include socket %>
 <% include light-request %>
 
