support material-ui src

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,11 +9,7 @@
 <h1><%= title %></h1>
 <p>Welcome to <%= title %></p>
 
-<script src="js/min/react.min.js"></script>
-<script src="js/min/react-dom.min.js"></script>
-<script src="js/min/ReactRouter.min.js"></script>
-
-<!--<% include react %>-->
+<% include react %>
 <% include socket %>
 <% include light-request %>
 
