--- a/views/react.ejs
+++ b/views/react.ejs
@@ -1,3 +1,8 @@
+<script src="/js/min/react.min.js"></script>
+<script src="/js/min/react-dom.min.js"></script>
+<script src="/js/min/ReactRouter.min.js"></script>
+<!--
 <script src="/js/react/react.min.js"></script>
 <script src="/js/react/react-dom.min.js"></script>
 <script src="/js/babel/browser.min.js"></script>
+-->
